# iot-firmware

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README.md  requirements.txt  setup.cfg
.github/: dependabot.yaml
.github/workflows/: build.yaml  check_tag.yaml  ci.yaml  docs.yaml  pre-commit-autoupdate.yaml  release.yaml  tests.yaml
docs/: conf.py  generate_graphs.py  index.rst  iot_firmware.communications.rst  iot_firmware.devices.rst  iot_firmware.event.basic.rst  iot_firmware.event.rst  iot_firmware.rst  requirements.txt  update_graphs.py
docs/graphs/: classes.dot  classes_communications.dot  classes_event.dot  packages.dot  packages_communications.dot  packages_event.dot
docs/source/: conf.py  index.rst  iot_firmware.communications.rst  iot_firmware.core.rst  iot_firmware.devices.rst  iot_firmware.monitor.rst  iot_firmware.rst  modules.rst
iot_firmware/: __init__.py  cli.py  controller.py  enums.py  firmware.py  iot_firmware.py  utils.py
iot_firmware/communications/: API.py  __init__.py  communications.py  enums.py  handler.py  schema.py  utils.py
iot_firmware/core/: __init__.py  config.py  core.py  task.py
iot_firmware/devices/: __init__.py  task.py
iot_firmware/event/: __init__.py  core.py  enum.py  event.py  handler.py  schema.py  type.py
iot_firmware/event/basic/: event.py  type.py
iot_firmware/monitor/: __init__.py  monitor.py  task.py
mocks/: mocks.py
tests/: api_test.py  event_test.py  firmware_test.py  test_api.py  test_cli.py  test_controller.py  test_event.py  test_firmware.py  test_utils.py  utils_test.py
