[metadata]
name = iot_firmware
version = 0.0.1-dev
author = Yair Bonastre
author_email = bonastreyair@gmail.com
description = It provides a set of tools to simplify the creation, configuration of and IoT Firmware.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonastreyair/iot-firmware
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    tqdm~=4.62.1
    uvloop~=0.16.0
