[metadata]
name = iot_firmware
version = 0.0.1-dev
author = Yair Bonastre
author_email = bonastreyair@gmail.com
description = It provides a set of tools to simplify the creation, configuration of and IoT Firmware.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bonastreyair/iot-firmware
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
install_requires =
    uvloop~=0.16.0
    tqdm~=4.62.1
    colorlog~=6.4.1

[options.packages.find]
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    iot-firmware = iot_firmware.cli:main

[options.extras_require]
test = pytest

[flake8]
max-line-length = 100
ignore = F841
exclude = .git,.eggs,__pycache__,build,dist,venv

[tool:pytest]
testpaths = tests
