[metadata]
name = iot_firmware
version = 0.0.1-dev
author = Yair Bonastre
author_email = bonastreyair@gmail.com
description = It provides a set of tools to simplify the creation, configuration of and IoT Firmware.
long_description = file: README.md CHANGELOG.md LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/bonastreyair/iot-firmware
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >=3.8
packages = find:
install_requires =
    uvloop~=0.16.0
    tqdm>=4.62.2,<4.64.0
    colorlog>=6.4.1,<6.7.0
    marshmallow>=3.13,<3.16
    marshmallow-dataclass~=8.5.3

[options.packages.find]
exclude =
    mocks*
    tests*
    docs*

[options.entry_points]
console_scripts =
    iot-firmware = iot_firmware.cli:cli

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio

docs =
    sphinx==4.5.0
    sphinx-rtd-theme==1.0.0
    myst-parser==0.17.0
    pylint==2.12.2

[flake8]
max-line-length = 100
ignore = F841,F401
exclude = .git,.eggs,__pycache__,build,dist,venv

[tool:pytest]
testpaths = iot_firmware tests
addopts = --doctest-modules --cov=iot_firmware --cov-report=xml --cov-fail-under=100
